add replacement link service singleton update replacement links on loaded update replacment links on replacement added removed boilerplate components added content to index page adjusted code to the right for vantage messages addded scrollbar to the main view

--- a/vantage/Vantage.Web/Pages/Index.razor
+++ b/vantage/Vantage.Web/Pages/Index.razor
@@ -1,7 +1,57 @@
 ﻿@page "/"
+<div class="full-height">
+    <h3>  <span class="oi oi-aperture" aria-hidden="true"></span> Full-Stack Application Task</h3>
+    <p class="col-6">
+        The following application has built over the weekend as a proof of competence as per request of Vantage Tag Systems.
+        I would like to add while I have heard of both GraphQL and Blazor, I have never authored a project in either technology. Also, Hot-Chocolate, and Strawberry Share are also bran new to me as well.
+        Prior to the development I had never heard of either.
+    </p>
 
-<h1>Hello, world!</h1>
+    <h3><span class="oi oi-link-intact" aria-hidden="true"></span>  Hyper-linked text messaging App</h3>
+    <p class="col-6">
+        Although, Tic-Tac-Toe was recommended, I decided on creating an application based on an extension I once built for Gmail. The extension would auto-magically add links as
+        you type into your email compose window. The purpose was to have a quick way of sharing various links that related to marketing aspects of the author's' company'.
+        Instead of a email links, I wanted to create a similar text chat. In this chat users can update a list of links paired with keywords. Upon updating the replacement links, the chat text window
+        shows the various links if any of the keywords match.
+    </p>
 
-Welcome to your new app.
+    <h3><span class="oi oi-book" aria-hidden="true"></span> Technology</h3>
+    <p class=" col-6 tehcnology">
+        <img src="img/tech.jpg" />
+        I was quite delighted to discover Hot-Chocolate and Strawberry Shake technologies. They are quite the compliment to GraphQL which other-wise would have been more of a challenge implementing
+        a project such as this in a very short period of time.  I will definitely adopt these tools to my development stack moving forward in my career. The following are the tools that I used during
+        implementation.
+    </p>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+    <ol>
+        <li><a href="https://docs.microsoft.com/en-us/aspnet/core/blazor/?view=aspnetcore-6.0" target="_blank">Blazor</a></li>
+        <li><a href="https://graphql.org/" target="_blank">GraphQL</a></li>
+        <li><a href="https://chillicream.com/docs/hotchocolate" target="_blank">Hot-Chocolate</a></li>
+        <li><a href="https://chillicream.com/blog/2019/11/25/strawberry-shake_2" target="_blank">Strawberry Shake</a></li>
+        <li><a href="https://www.microsoft.com/en-ca/sql-server/sql-server-downloads" target="_blank">Microsoft SQL Server</a></li>
+        <li><a href="https://chillicream.com/docs/bananacakepop" target="_blank">Banana Cake Pop</a></li>
+        <li><a href="https://apis.guru/graphql-voyager/" target="_blank">GraphQL Voyager</a></li>
+    </ol>
+
+    <h3><span class="oi oi-video col-6" aria-hidden="true"></span> Videos and Instruction</h3>
+    <p class="col-6">
+        A number of videos help out during the process. I recommend Les Jackson's videos on the subject of GraphQL with Blazor and Hot-Chocolate. As well, Michael Staib's videos were also
+        a great reference for Strawberry Shake. Here are the videos I have found most useful.
+
+    </p>
+
+    <ol>
+        <li><a href="https://www.youtube.com/watch?v=iDAYdrFHqGU&t=1785s" target="_blank">Real-time Data fetching with GraphQL and Blazor</a> </li>
+        <li><a href="https://www.youtube.com/watch?v=HuN94qNwQmM&t=10067s" target="_blank">GraphQL API with .NET 5 and Hot Chocolate</a></li>
+        <li><a href="https://www.youtube.com/watch?v=agIJTnpfFGA&t=1628s" target="_blank">Blazor API Client using REST & GraphQL APIs - Full Course</a> </li>
+    </ol>
+
+    <h3><span class="oi oi-fire" aria-hidden="true"></span>Development Issues</h3>
+    <p class="col-6">
+        During the development I ran into some major annoyances that slowed me down quite a bit.
+        They were mainly from the consistency for the naming and the output of the generated classes that Strawberry-Shake  produces. I fought with the tools for a very long time
+        because I was unsatisfied with the output I was receiving. I ultimately decided that I would continue the development and find out at a later date what the difficulties were.
+        My instinct tells me that there are some bugs in the latest build that somehow have gone unnoticed.
+    </p>
+
+</div>
