--- a/vantage/Vantage.Web/Shared/MainLayout.razor
+++ b/vantage/Vantage.Web/Shared/MainLayout.razor
@@ -1,12 +1,12 @@
 @inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
+    <div class="sidebar side-bg">
         <NavMenu />
     </div>
 
     <div class="main">
-        <div class="top-row px-4">
+        <div class="top-row px-4 top-bg">
             <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
         </div>
 
