--- a/vantage/Vantage.Web/Shared/NavMenu.razor
+++ b/vantage/Vantage.Web/Shared/NavMenu.razor
@@ -12,8 +12,8 @@
     </button>
 </div>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
+<div class="@NavMenuCssClass" @onclick="ToggleNavMenu" >
+    <ul class="nav flex-column nav-overlay">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
