--- a/vantage/Vantage.Web/wwwroot/css/app.css
+++ b/vantage/Vantage.Web/wwwroot/css/app.css
@@ -46,6 +46,10 @@ a, .btn-link {
 .content {
   height: calc(100% - 3.5rem); }
 
+.full-height {
+  height: calc(100% - 3.5rem);
+  overflow-y: auto; }
+
 .container {
   height: 100%;
   min-height: calc(100% - 3.5rem);
@@ -71,3 +75,18 @@ a, .btn-link {
       flex: 1; }
     .container .box-lower > div:last-child {
       flex: 0 0 5em; }
+
+.vantage-blockquote > img {
+  margin-right: 1em;
+  width: 10em;
+  float: left; }
+
+.tehcnology > img {
+  width: 12em;
+  margin-right: 1em;
+  float: left; }
+
+.top-bg {
+  background-position-y: 30em;
+  background-image: url(/img/chocolate.jpg);
+  background-repeat: initial; }
