--- a/vantage/Vantage.Web/wwwroot/css/app.scss
+++ b/vantage/Vantage.Web/wwwroot/css/app.scss
@@ -56,7 +56,10 @@ a, .btn-link {
 .content {
     height: calc(100% - 3.5rem);
 }
-
+.full-height {
+    height: calc(100% - 3.5rem);
+    overflow-y:auto;
+}
 .container {
     height: 100%;
     min-height: calc(100% - 3.5rem);
@@ -84,7 +87,7 @@ a, .btn-link {
         display: flex;
         flex-direction: row;
 
-        > div { 
+        > div {
             flex: 1
         }
 
@@ -93,3 +96,24 @@ a, .btn-link {
         }
     }
 }
+
+.vantage-blockquote {
+    > img {
+        margin-right: 1em;
+        width: 10em;
+        float: left;
+    }
+}
+.tehcnology {
+    > img {
+        width: 12em;
+        margin-right: 1em;
+        float: left;
+    }
+}
+.top-bg {
+    background-position-y: 30em;
+    background-image: url(/img/chocolate.jpg);
+    background-repeat: initial;
+}
+
