missing col span added

--- a/vantage/Vantage.Web/Pages/Index.razor
+++ b/vantage/Vantage.Web/Pages/Index.razor
@@ -33,7 +33,7 @@
         <li><a href="https://apis.guru/graphql-voyager/" target="_blank">GraphQL Voyager</a></li>
     </ol>
 
-    <h3><span class="oi oi-video col-6" aria-hidden="true"></span> Videos and Instruction</h3>
+    <h3><span class="oi oi-video" aria-hidden="true"></span> Videos and Instruction</h3>
     <p class="col-6">
         A number of videos help out during the process. I recommend Les Jackson's videos on the subject of GraphQL with Blazor and Hot-Chocolate. As well, Michael Staib's videos were also
         a great reference for Strawberry Shake. Here are the videos I have found most useful.
