--- a/vantage/Vantage.Web/Pages/ReplacementsLinks.razor.scss
+++ b/vantage/Vantage.Web/Pages/ReplacementsLinks.razor.scss
@@ -72,7 +72,6 @@
         
     }
 
-
     .replacement-link {
         margin-left: 0;
         padding: 0;
@@ -99,4 +98,7 @@
 }
 .btn-primary {
     min-width: 10em;
+}
+span.input-group-text {
+    width: 5.6em;
 }
