--- a/vantage/Vantage.Web/wwwroot/css/app.scss
+++ b/vantage/Vantage.Web/wwwroot/css/app.scss
@@ -117,3 +117,10 @@ a, .btn-link {
     background-repeat: initial;
 }
 
+/* HACK THIS IS NOT CACHE BUSTING PROPERLY IN THE NAV CSS */
+.replacement-link > li:first-child > div:first-child {
+    width: 8em;
+}
+.nav-link {
+    cursor: pointer;
+}
