fixed some typos in the index page removed more boiler plate files

--- a/vantage/Vantage.Web/Pages/Index.razor
+++ b/vantage/Vantage.Web/Pages/Index.razor
@@ -3,7 +3,8 @@
     <h3>  <span class="oi oi-aperture" aria-hidden="true"></span> Full-Stack Application Task</h3>
     <p class="col-6">
         The following application has built over the weekend as a proof of competence as per request of Vantage Tag Systems.
-        I would like to add while I have heard of both GraphQL and Blazor, I have never authored a project in either technology. Also, Hot-Chocolate, and Strawberry Share are also bran new to me as well.
+        I would like to add, while I have heard of both GraphQL and Blazor, I have never authored or created a project in either technology. 
+        Also, Hot-Chocolate and Strawberry-Share are also brand new to me as well.
         Prior to the development I had never heard of either.
     </p>
 
