--- a/vantage/Vantage.Web/Shared/MainLayout.razor
+++ b/vantage/Vantage.Web/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 
     <div class="main">
         <div class="top-row px-4 top-bg">
-            <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+            <strong><a href="http://blazor.net" target="_blank" class="ml-md-auto about">About</a></strong>
         </div>
 
         <div class="content px-4">
