--- a/vantage/Vantage.Web/wwwroot/css/app.scss
+++ b/vantage/Vantage.Web/wwwroot/css/app.scss
@@ -124,3 +124,9 @@ a, .btn-link {
 .nav-link {
     cursor: pointer;
 }
+.about { 
+    color:aliceblue;
+}
+.about:hover { 
+    color:lightcoral;
+}
