scaling max-width adjusted

--- a/vantage/Vantage.Web/Pages/ReplacementsLinks.razor
+++ b/vantage/Vantage.Web/Pages/ReplacementsLinks.razor
@@ -9,7 +9,7 @@
     Loading replacements links...
 </div>
 
-<div class="col-12" hidden="@(!_ready)">
+<div class="col-12 replacements-container" hidden="@(!_ready)">
     <h1>Replacement Links</h1>
     <p><strong>Any time a text message is sent the contents are checked for matches in the following list. Matches will be linked to the given http address.</strong></p>
 
