--- a/vantage/Vantage.Web/Pages/ReplacementsLinks.razor.scss
+++ b/vantage/Vantage.Web/Pages/ReplacementsLinks.razor.scss
@@ -1,5 +1,4 @@
 ﻿section {
-    max-width: 50%;
 
     ul {
         list-style-type: none;
@@ -101,4 +100,7 @@
 }
 span.input-group-text {
     width: 5.6  em;
+}
+.replacements-container {
+    max-width: 1150px;
 }
